--- a/index.html
+++ b/index.html
@@ -5,183 +5,207 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebStudio</title>
-    <link rel="stylesheet" href="./css/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
 
   <body>
     <header class="page-header">
-      <nav class="page-nav">
+      <div class="container main-nav">
         <a href="./index.html" class="link logo">
           <span class="accent">Web</span>Studio
         </a>
-        <ul class="list">
-          <li class="">
-            <a href="./index.html" class="link nav-list-item current">Студія</a>
-          </li>
-          <li class="">
-            <a href="./portfolio.html" class="link nav-list-item">Портфоліо</a>
-          </li>
-          <li class="">
-            <a href="" class="link nav-list-item">Контакти</a>
-          </li>
-        </ul>
-      </nav>
-      <ul class="list">
-        <li class="">
-          <a href="mailto:info@devstudio.com" class="link contact-list-item"
-            >info@devstudio.com</a
-          >
-        </li>
-        <li class="">
-          <a href="tel:+380961111111" class="link contact-list-item"
-            >+38 096 111 11 11</a
-          >
-        </li>
-      </ul>
-    </header>
-
-    <main>
-      <section class="hero">
-        <h1 class="hero-text">Ефективні рішення для вашого бізнесу</h1>
-        <button type="button" class="btn hero-btn">Замовити послугу</button>
-      </section>
-
-      <section class="features">
-        <h2 class="visually-hidden">Наші особливості</h2>
-        <ul class="list">
-          <li>
-            <h3 class="feature-title">УВАГА ДО ДЕТАЛЕЙ</h3>
-            <p class="feature-description">
-              Ідейні міркування, і навіть початок повсякденної роботи з
-              формування позиції.
-            </p>
-          </li>
-          <li>
-            <h3 class="feature-title">ПУНКТУАЛЬНІСТЬ</h3>
-            <p class="feature-description">
-              Завдання організації, особливо рамки і місце навчання кадрів тягне
-              у себе.
-            </p>
-          </li>
-          <li>
-            <h3 class="feature-title">ПЛАНУВАННЯ</h3>
-            <p class="feature-description">
-              Так само консультація з широким активом значною мірою зумовлює.
-            </p>
-          </li>
-          <li>
-            <h3 class="feature-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-            <p class="feature-description">
-              Значимість цих проблем настільки очевидна, що реалізація планових
-              завдань.
-            </p>
-          </li>
-        </ul>
-      </section>
-
-      <section class="work">
-        <h2 class="section-title">Чим ми займаємося</h2>
-        <ul class="list">
-          <li>
-            <img
-              src="./images/photo_1.jpg"
-              alt="Людина набирає текст на клавіатурі"
-              width="370"
-            />
-          </li>
-          <li>
-            <img
-              src="./images/photo_2.jpg"
-              alt="Людина тримає у лівій руці телефон, а права рука на тачпаді ноутбука"
-              width="370"
-            />
-          </li>
-          <li>
-            <img
-              src="./images/photo_3.jpg"
-              alt="Людина тримає в руках планшет на якому зобращено шестикутник заповнений різними кольорами"
-              width="370"
-            />
-          </li>
-        </ul>
-      </section>
-
-      <section class="team">
-        <h2 class="section-title">Наша команда</h2>
-        <ul class="list">
-          <li class="team-member">
-            <img
-              src="./images/team_photo_1.jpg"
-              alt="Член команди"
-              width="270"
-            />
-            <h3 class="team-member-name">Ігор Дем'яненко</h3>
-            <p class="member-position">Product Designer</p>
-          </li>
-          <li class="team-member">
-            <img
-              src="./images/team_photo_2.jpg"
-              alt="Член команди"
-              width="270"
-            />
-            <h3 class="team-member-name">Ольга Рєпіна</h3>
-            <p class="member-position">Frontend Developer</p>
-          </li>
-          <li class="team-member">
-            <img
-              src="./images/team_photo_3.jpg"
-              alt="Член команди"
-              width="270"
-            />
-            <h3 class="team-member-name">Микола Тарасов</h3>
-            <p class="member-position">Marketing</p>
-          </li>
-          <li class="team-member">
-            <img
-              src="./images/team_photo_4.jpg"
-              alt="Член команди"
-              width="270"
-            />
-            <h3 class="team-member-name">Михайло Єрмаков</h3>
-            <p class="member-position">UI Designer</p>
-          </li>
-        </ul>
-      </section>
-    </main>
-
-    <footer class="page-footer">
-      <a href="./index.html" class="logo link"
-        ><span class="accent">Web</span>Studio</a
-      >
-      <address>
-        <ul class="list">
-          <li>
-            <a
-              href="https://goo.gl/maps/CrWaenzeoMtcujL5A"
-              target="_blank"
-              rel="noreferrer noopener"
-              class="link company-address"
-              >м. Київ, пр-т Лесі Українки, 26</a
-            >
-          </li>
-          <li>
-            <a href="mailto:info@devstudio.com" class="link company-mail"
+        <nav>
+          <ul class="list nav-pages-list">
+            <li class="nav-pages-item">
+              <a href="./index.html" class="link nav-list-item current"
+                >Студія</a
+              >
+            </li>
+            <li class="nav-pages-item">
+              <a href="./portfolio.html" class="link nav-list-item"
+                >Портфоліо</a
+              >
+            </li>
+            <li class="nav-pages-item">
+              <a href="" class="link nav-list-item">Контакти</a>
+            </li>
+          </ul>
+        </nav>
+        <ul class="list header-contact-list">
+          <li class="header-contact-item">
+            <a href="mailto:info@devstudio.com" class="link contact-list-item"
               >info@devstudio.com</a
             >
           </li>
-          <li>
-            <a href="tel:+380961111111" class="link company-tel"
+          <li class="header-contact-item">
+            <a href="tel:+380961111111" class="link contact-list-item"
               >+38 096 111 11 11</a
             >
           </li>
         </ul>
-      </address>
+      </div>
+    </header>
+
+    <main>
+      <section class="hero">
+      
+          <h1 class="hero-text">Ефективні рішення для вашого бізнесу</h1>
+          <button type="button" class="btn hero-btn">Замовити послугу</button>
+        
+      </section>
+
+      <section class="section features">
+        <div class="container">
+          <h2 class="visually-hidden">Наші особливості</h2>
+          <ul class="list">
+            <li class="list-item">
+              <h3 class="feature-title">УВАГА ДО ДЕТАЛЕЙ</h3>
+              <p class="feature-description">
+                Ідейні міркування, і навіть початок повсякденної роботи з
+                формування позиції.
+              </p>
+            </li>
+            <li class="list-item">
+              <h3 class="feature-title">ПУНКТУАЛЬНІСТЬ</h3>
+              <p class="feature-description">
+                Завдання організації, особливо рамки і місце навчання кадрів
+                тягне у себе.
+              </p>
+            </li>
+            <li class="list-item">
+              <h3 class="feature-title">ПЛАНУВАННЯ</h3>
+              <p class="feature-description">
+                Так само консультація з широким активом значною мірою зумовлює.
+              </p>
+            </li>
+            <li class="list-item">
+              <h3 class="feature-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+              <p class="feature-description">
+                Значимість цих проблем настільки очевидна, що реалізація
+                планових завдань.
+              </p>
+            </li>
+          </ul>
+        </div>
+      </section>
+
+      <section class="section no-top-padding work">
+        <div class="container">
+          <h2 class="section-title">Чим ми займаємося</h2>
+          <ul class="list">
+            <li class="list-item">
+              <img
+                src="./images/photo_1.jpg"
+                alt="Людина набирає текст на клавіатурі"
+                width="370"
+              />
+            </li>
+            <li class="list-item">
+              <img
+                src="./images/photo_2.jpg"
+                alt="Людина тримає у лівій руці телефон, а права рука на тачпаді ноутбука"
+                width="370"
+              />
+            </li>
+            <li class="list-item">
+              <img
+                src="./images/photo_3.jpg"
+                alt="Людина тримає в руках планшет на якому зобращено шестикутник заповнений різними кольорами"
+                width="370"
+              />
+            </li>
+          </ul>
+        </div>
+      </section>
+
+      <section class="section team">
+        <div class="container">
+          <h2 class="section-title">Наша команда</h2>
+          <ul class="list">
+            <li class="team-member">
+              <img
+                src="./images/team_photo_1.jpg"
+                alt="Член команди"
+                width="270"
+                class="team-member-photo"
+              />
+              <h3 class="team-member-name">Ігор Дем'яненко</h3>
+              <p class="member-position">Product Designer</p>
+            </li>
+            <li class="team-member">
+              <img
+                src="./images/team_photo_2.jpg"
+                alt="Член команди"
+                width="270"
+                class="team-member-photo"
+              />
+              <h3 class="team-member-name">Ольга Рєпіна</h3>
+              <p class="member-position">Frontend Developer</p>
+            </li>
+            <li class="team-member">
+              <img
+                src="./images/team_photo_3.jpg"
+                alt="Член команди"
+                width="270"
+                class="team-member-photo"
+              />
+              <h3 class="team-member-name">Микола Тарасов</h3>
+              <p class="member-position">Marketing</p>
+            </li>
+            <li class="team-member">
+              <img
+                src="./images/team_photo_4.jpg"
+                alt="Член команди"
+                width="270"
+                class="team-member-photo"
+              />
+              <h3 class="team-member-name">Михайло Єрмаков</h3>
+              <p class="member-position">UI Designer</p>
+            </li>
+          </ul>
+        </div>
+      </section>
+    </main>
+
+    <footer class="page-footer">
+      <div class="container">
+        <a href="./index.html" class="logo link"
+          ><span class="accent">Web</span>Studio</a
+        >
+        <address>
+          <ul class="list">
+            <li>
+              <a
+                href="https://goo.gl/maps/CrWaenzeoMtcujL5A"
+                target="_blank"
+                rel="noreferrer noopener"
+                class="link company-address"
+                >м. Київ, пр-т Лесі Українки, 26</a
+              >
+            </li>
+            <li>
+              <a href="mailto:info@devstudio.com" class="link company-mail"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a href="tel:+380961111111" class="link company-tel"
+                >+38 096 111 11 11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
