--- a/portfolio.html
+++ b/portfolio.html
@@ -249,7 +249,7 @@
             ><span class="accent">Web</span>Studio</a
           >
           <address>
-            <ul class="list">
+            <ul class="list footer-address-list">
               <li>
                 <a
                   href="https://goo.gl/maps/CrWaenzeoMtcujL5A"
@@ -272,6 +272,7 @@
             </ul>
           </address>
         </div>
+
         <div class="footer-social-medias">
           <p class="footer-social-medias-title">приєднуйтесь</p>
           <ul class="footer-soc-list list">
@@ -307,6 +308,23 @@
               </a>
             </li>
           </ul>
+        </div>
+
+        <div class="footer-form-section">
+          <p class="footer-form-title">Підпишіться на розсилку</p>
+          <form class="footer-form">
+            <input
+              class="footer-form-input"
+              type="email"
+              placeholder="E-mail"
+            />
+            <button class="footer-submit-btn" type="submit">
+              Підписатися
+              <svg class="icon-footer-btn" width="24" height="24">
+                <use href="./images/icons-not-min.svg#icon-send"></use>
+              </svg>
+            </button>
+          </form>
         </div>
       </div>
     </footer>
