--- a/index.html
+++ b/index.html
@@ -549,7 +549,7 @@
             ></textarea>
           </label>
 
-          <div class="checkbox-input-wrapper check-wrapper">
+          <div class="checkbox-input-wrapper">
             <input
               class="modal-input-checkbox visually-hidden"
               type="checkbox"
